--- a/web/templates/page/elm_app.html.eex
+++ b/web/templates/page/elm_app.html.eex
@@ -1,5 +1,11 @@
 <script>
- window.efSupport.bootstrapURL = "<%= api_path(@conn, :bootstrap) %>";
+
+ window.efSupport.appOptions = {
+   bootstrapURL:  "<%= api_path(@conn, :bootstrap) %>",
+   createTaskURL: "<%= api_path(@conn, :create_task) %>",
+   updateTaskURL: "<%= api_path(@conn, :update_task) %>",
+   csrfToken:     "<%= get_csrf_token() %>"
+ };
 </script>
 
 <div id="elm-app"></div>
